--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "test": "echo \\\"Error: no tests specified\\\" && exit 1",
-    "tsc": "tsc --project tsconfig.json",
-    "postinstall": "npm run tsc"
+    "postinstall": "tsc --project tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -24,14 +23,14 @@
     "graphdb": "^3.0.0",
     "mongoose": "^6.9.0",
     "node-fetch": "^3.3.0",
-    "redis": "^4.6.4"
+    "redis": "^4.6.4",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "ts-node": "^10.9.1"
   }
 }
