--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "outDir": "build"
+    "outDir": "build",
+    "declaration": true
   },
   "include": [
     "src",
