--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  test-backend:
+  test-graphdb-utils:
     runs-on: ubuntu-latest
 
     steps:
@@ -45,7 +45,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run test
+        run: npm run build
 
       - name: Test
         run: npm test
