--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,3 +49,13 @@ jobs:
 
       - name: Test
         run: npm test
+
+      - name: Build GraphDB Utils Docs
+        working-directory: backend/utils/graphdb
+        run: npm run build:docs
+
+      - name: Deploy Docs to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
