--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Build GraphDB Utils Docs
         run: npm run build:docs
 
+      - name: Copy examples
+        run: cp ./examples ./docs
+
       - name: Deploy Docs to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
