--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "outDir": "build",
-    "declaration": true
+    "declaration": true,
+    "sourceMap": true
   },
   "include": [
     "src",
